# OS_labs

./: .gitignore  CMakeLists.txt  README.md
cp/: CMakeLists.txt  main.cpp
cp/doc/: report.docx
cp/include/: job_dag.hpp  job_exec.hpp
cp/src/: job_dag.cpp  job_exec.cpp
data/cp/ex1/: ex1.json  meta.txt
data/cp/ex2/: ex2.json  meta.txt
data/cp/ex3/: ex3.json  meta.txt
data/cp/ex4/: ex4.json  meta.txt
data/cp/ex5/: ex5.json  meta.txt
data/cp/ex6/: ex6.json  meta.txt
data/cp/ex6/src/: col_job1.cpp  col_job2.cpp  col_job3.cpp  comp_job1.cpp  comp_job2.cpp  comp_job3.cpp  reduce.cpp
data/cp/ex7/: ex7.json
lab1/: CMakeLists.txt  main.c
lab1/doc/: report.docx
lab1/include/: parent.h  utils.h
lab1/src/: child.c  parent.c  utils.c
lab2/: CMakeLists.txt  main.cpp
lab2/doc/: report.docx
lab2/include/: generator.h  merge_sort.h  task_queue.h  thread_pool.h  timer.h
lab2/src/: generator.cpp  merge_sort.c  merge_sort.cpp  task_queue.cpp  thread_pool.cpp  timer.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/doc/: report.docx
lab3/include/: parent.h  util.h
lab3/src/: child.cpp  parent.cpp  util.cpp
lab4/: CMakeLists.txt  main1.cpp  main2.cpp
lab4/doc/: report.docx
lab4/include/: lib.h
lab4/src/: lib1.c  lib2.c
lab5/: CMakeLists.txt  a.cpp
lab5/doc/: report.docx
lab5/include/: base.hpp  computer_base.hpp  manager_base.hpp  wqueue.hpp
lab5/src/: base.cpp  computer.cpp  computer_base.cpp  manager.cpp  manager_base.cpp
lab8/: report.docx
lib/include/: zmq.hpp
tests/: CMakeLists.txt  cp_test.cpp  lab1_test.cpp  lab2_test.cpp  lab3_test.cpp  lab4_test1.cpp  lab4_test2.cpp
